--- a/vis.ipynb
+++ b/vis.ipynb
@@ -36,16 +36,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
+   "id": "47fd4a5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(torch.Size([8]),\n",
+       " tensor([-0.8663, -0.8589,  1.1738, -0.0928,  1.0638, -0.2478, -0.2474,  0.8321]))"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "t = torch.randn(3,)\n",
+    "\n",
+    "f = torch.randn(5,)\n",
+    "t, f\n",
+    "\n",
+    "x = torch.cat([t, f], dim=0)\n",
+    "x\n",
+    "x.shape, x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "id": "dced3538",
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([-0.2189,  0.3338,  0.4587], grad_fn=<ViewBackward0>)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import torch.nn as nn\n",
+    "class MLP(nn.Module):\n",
+    "    def __init__(self, input_dim, hidden_dim, output_dim):\n",
+    "        super(MLP, self).__init__()\n",
+    "        self.fc1 = nn.Linear(input_dim, hidden_dim)\n",
+    "        relu = nn.ReLU()\n",
+    "        self.fc2 = nn.Linear(hidden_dim, output_dim)\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "        x = torch.relu(self.fc1(x))\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "\n",
+    "model = MLP(input_dim=8, hidden_dim=20, output_dim=3)\n",
+    "y_pred = model(x)\n",
+    "y_pred\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c7b29ae6",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y = 0\n",
+    "loss = loss(y, y_pred)\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.001)\n",
+    "optimizer.zero_grad()\n",
+    "loss.backward()\n",
+    "optimizer.step()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mani",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -59,7 +132,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.25"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
